--- a/Demona/Gargoyle/support/libpng-1.2.8/libpng.vcproj
+++ b/Demona/Gargoyle/support/libpng-1.2.8/libpng.vcproj
@@ -103,6 +103,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\zlib-1.2.2"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
