Moved TestCaseIO.cs from ConsoleZLR to TestSuite.

--- a/TestSuite/TestSuite.csproj
+++ b/TestSuite/TestSuite.csproj
@@ -35,6 +35,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCaseIO.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ZLR\ZLR.VM.csproj">
+      <Project>{75CC483D-D28E-49EE-AB8F-F77CC3F58BFA}</Project>
+      <Name>ZLR.VM</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
