Implemented command files, and changed the I/O interface: the VM uses its own command file parser, and the I/O module only provides a stream.

--- a/ZLR/ZLR.VM.csproj
+++ b/ZLR/ZLR.VM.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="DebugInfo.cs" />
     <Compile Include="IFF.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Objects.cs" />
     <Compile Include="Opcodes.cs" />
     <Compile Include="Opcodes_0OP.cs" />
