Demona: Fixed reverse video in the lower window. Also cleaned up garglk.ini.

--- a/Demona/garglk.ini
+++ b/Demona/garglk.ini
@@ -162,7 +162,10 @@ gcolor 10 ffffff 606060 # User2
 # The name of a game file can also be used.
 #
 
-[ Agility Arun Magnetic Nitfol Scare ]
+[ Demona ]
+
+tcolor  9 ffffff 606060 # User1 (reverse video)
+tcolor 10 000000 ffffff # User2 (preformatted & emphasized)
 
 gcolor  0 ffffff 606060 # Normal
 gcolor  1 ffffff 606060 # Emphasized
@@ -173,31 +176,6 @@ gcolor  5 ffffff 606060 # Alert
 gcolor  6 ffffff 606060 # Note
 gcolor  7 ffffff 606060 # BlockQuote
 gcolor  8 ffffff 606060 # Input
-
-[ Magnetic ]
-cols 68
-
-[ Git Glulxe ]
-# bad! bad! bad games!
-cols 80
-rows 25
-
-[ Hugo Git Glulxe ]
-
-# Hugo has ugly status bars with no padding.
-# Hugo also uses grid windows for arbitrarily placed text.
-# Add a thin border line between windows.
-
-wborderx 1
-wbordery 1
-
-gcolor 9  000000 ffffff
-gcolor 10 000000 ffffff
-
-# [ Agility ]
-# monoaspect 0.8	# squeeze mono font
-# cols 80
-# rows 25
 
 [ curses.z5 ]
 monoaspect 0.9	# squeeze to compensate for more columns
