Demona: Fixed the display of box quotes, which involved delaying split_window's effect when shrinking the window (until after the next line input, or before the next character input, whichever comes first), and changing the text grid color settings (so the border around the quote isn't reversed). Fixed the solution and project settings so mixed-mode debugging works correctly.

--- a/Demona/Gargoyle/garglk/libgarglk.vcproj
+++ b/Demona/Gargoyle/garglk/libgarglk.vcproj
@@ -230,6 +230,14 @@
 				RelativePath=".\cgunigen.c"
 				>
 				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Release|Win32"
 					ExcludedFromBuild="true"
 					>
