Demona: Added support for @set_colour and all combinations of text styles (fixed+reverse+bold+italic).

--- a/Demona/garglk.ini
+++ b/Demona/garglk.ini
@@ -164,8 +164,13 @@ gcolor 10 ffffff 606060 # User2
 
 [ Demona ]
 
-tcolor  9 ffffff 606060 # User1 (reverse video)
-tcolor 10 000000 ffffff # User2 (preformatted & emphasized)
+tfont   3 monob		# Header (fixed & bold)
+tfont   6 monoi		# Note (fixed & italic)
+tfont   9 monoz		# User1 (fixed & bold & italic)
+
+gfont   3 monob		# Header (fixed & bold)
+gfont   6 monoi		# Note (fixed & italic)
+gfont   9 monoz		# User1 (fixed & bold & italic)
 
 [ curses.z5 ]
 monoaspect 0.9	# squeeze to compensate for more columns
