--- a/TestSuite/TestSuite.csproj
+++ b/TestSuite/TestSuite.csproj
@@ -40,6 +40,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TestCase.cs" />
     <Compile Include="TestCaseIO.cs" />
   </ItemGroup>
   <ItemGroup>
