ZMachine: Imposed a configurable limit on the size of the code cache. Fixed UndoState allocating too much memory. ConsoleZLR: Added a DumbIO module for testing.

--- a/ZLR/ZLR.VM.csproj
+++ b/ZLR/ZLR.VM.csproj
@@ -36,6 +36,7 @@
     <Compile Include="DebugInfo.cs" />
     <Compile Include="IFF.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="LruCache.cs" />
     <Compile Include="Objects.cs" />
     <Compile Include="Opcodes.cs" />
     <Compile Include="Opcodes_0OP.cs" />
