--- a/ConsoleZLR/ConsoleZLR.csproj
+++ b/ConsoleZLR/ConsoleZLR.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleIO.cs" />
+    <Compile Include="DumbIO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
