ZMachine: Added debugger mode. ConsoleZLR: Added -debug option to start a simple CLI debugger.

--- a/ZLR/ZLR.VM.csproj
+++ b/ZLR/ZLR.VM.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Debugger.cs" />
     <Compile Include="DebugInfo.cs" />
     <Compile Include="IFF.cs" />
     <Compile Include="Input.cs" />
